--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ var _hmt = _hmt || [];
       <span>Master</span><br />
       <span>Alibaba Group</span>
       <br />
-      <a href="https://www.zhihu.com/people/aihaoge1314" target="_blank">Zhihu</a>
+      <a href="https://www.zhihu.com/people/aihaoge1314" target="_blank">Zhihu</a> | <a href="https://github.com/haodotzhang" target="_blank">Github</a>
     </div>
   </div>
 </div>
@@ -237,7 +237,7 @@ var _hmt = _hmt || [];
     <div class="wide">
       <a class="paper" onclick="_gaq.push(['_trackEvent', 'Pub', 'Download', 'zh2021AAAI']);" href="https://ojs.aaai.org/index.php/AAAI/article/view/16177">Appearance-Motion Memory Consistency Network for Video Anomaly Detection
 </a><br />
-      Ruichu Cai, <strong>Hao Zhang</strong>, Wen Liu, Shenghua Gao, Zhifeng Hao.<br />
+      Ruichu Cai*, <strong>Hao Zhang*</strong>, Wen Liu*, Shenghua Gao, Zhifeng Hao.<br />
       AAAI 2021 /
       <a shape="rect" href="javascript:togglebib('luo2022cvpr')" class="togglebib">bibtex</a>
       <pre xml:space="preserve">
