--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ var _hmt = _hmt || [];
 </script>
 	
 
-<script type="text/javascript" src="js/hidebib.js"></script>
+<script type="text/javascript" src="hidebib.js"></script>
 
 <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
  rel="stylesheet" type="text/css" />
@@ -184,7 +184,7 @@ var _hmt = _hmt || [];
 
 <div style="margin-bottom: 1em; border: 1px solid #ddd; background-color: #fff; padding: 1em; height: 200px;">
   <div style="margin: 0 auto; width: 70%; line-height: 130%;">
-    <img title="rbg" style="float: right; padding-right: .5em; height: 200px;" src="images/luowx.jpg" />
+    <img title="rbg" style="float: right; padding-right: .5em; height: 200px;" src="zh.jpg" />
     <div style="padding-left: 1em; vertical-align: top; height: 250px;">
       <span style="font-size: 16pt; line-height: 130%;">Hao Zhang</span><br />
       <span>Master</span><br />
@@ -239,7 +239,7 @@ var _hmt = _hmt || [];
 </a><br />
       Ruichu Cai*, <strong>Hao Zhang*</strong>, Wen Liu*, Shenghua Gao, Zhifeng Hao.<br />
       AAAI 2021 /
-      <a shape="rect" href="javascript:togglebib('luo2022cvpr')" class="togglebib">bibtex</a>
+      <a shape="rect" href="javascript:togglebib('zh2021AAAI')" class="togglebib">bibtex</a>
       <pre xml:space="preserve">
       @inproceedings{cai2021appearance,
       title={Appearance-motion memory consistency network for video anomaly detection},
