--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@ var _hmt = _hmt || [];
 			[2021-07] I joined <a href="https://www.alibabagroup.com/en/global/home" target="_blank">Alibaba Group</a> as an algorithm engineer.
 		</ul>
     <ul>
-			[2021-02] I joined Baidu Group <a href="https://home.baidu.com/" target="_blank">IDG</a> as an algorithm intern.
+			[2021-02] I joined <a href="https://home.baidu.com/" target="_blank">Baidu Group</a> as an algorithm intern.
 		</ul>
     <ul>
-			[2020-12] I joined Kuaishou Technology <a href="https://www.kuaishou.com/en" target="_blank">MMULab</a> as an algorithm intern.
+			[2020-12] I joined <a href="https://www.kuaishou.com/en" target="_blank">Kuaishou Technology</a> as an algorithm intern.
 		</ul>
 		<ul>
 			[2020-12] I published a paper <a href="https://ojs.aaai.org/index.php/AAAI/article/view/16177" target="_blank">AMMCNet</a> as the first author at AAAI2021.
