--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ var _hmt = _hmt || [];
     <div style="padding-left: 1em; vertical-align: top; height: 250px;">
       <span style="font-size: 16pt; line-height: 130%;">Hao Zhang</span><br />
       <span>Master</span><br />
-      <span>Alibaba Group</span>
-      <br />
+      <span>Alibaba Group</span><br />
+      <span>haodotzhang[AT]gmail.com</span><br />
       <a href="https://www.zhihu.com/people/aihaoge1314" target="_blank">Zhihu</a> | <a href="https://github.com/haodotzhang" target="_blank">Github</a>
     </div>
   </div>
